--- a/index.ipynb
+++ b/index.ipynb
@@ -42,12 +42,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here"
+    "\n",
+    "# define function here\n",
+    "def number_of_destinations():\n",
+    "    size = len(travel_destinations)\n",
+    "    return size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Below, remove the first `#` to uncomment the following line(s) of code and then press `shift` + `enter` to run the cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_destinations() # 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now write another function called `next_up` that returns our first destination (the destination with the lowest index), in the `list_of_destinations` list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define function here\n",
+    "def next_up():\n",
+    "    return (travel_destinations[0])"
    ]
   },
   {
@@ -65,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "6"
+       "'argentina'"
       ]
      },
      "execution_count": 9,
@@ -74,14 +123,15 @@
     }
    ],
    "source": [
-    "# number_of_destinations() # 6"
+    "#list_of_destinations = ['argentina', 'canada', 'croatia']\n",
+    "next_up() # 'argentina'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now write another function called `next_up` that returns our first destination (the destination with the lowest index), in the `list_of_destinations` list."
+    "Ok, now write a function called `favorite_destination` that returns the string `'madagascar'`."
    ]
   },
   {
@@ -90,7 +140,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n",
+    "def favorite_destination():\n",
+    "    return('madagascar')"
    ]
   },
   {
@@ -108,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "'argentina'"
+       "'madagascar'"
       ]
      },
      "execution_count": 11,
@@ -117,51 +169,7 @@
     }
    ],
    "source": [
-    "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "# next_up() # 'argentina'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ok, now write a function called `favorite_destination` that returns the string `'madagascar'`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define function here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Below, remove the first `#` to uncomment the following line(s) of code and then press `shift` + `enter` to run the cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'madagascar'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# favorite_destination() # 'madagascar'"
+    "favorite_destination() # 'madagascar'"
    ]
   },
   {
@@ -173,11 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n",
+    "\n",
+    "def add_favorite_destination():\n",
+    "    favorite_destinations.append(favorite_destination())\n",
+    "    return favorite_destination()"
    ]
   },
   {
@@ -189,30 +201,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'madagascar'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# add_favorite_destination()\n",
+    "add_favorite_destination()\n",
     "favorite_destinations[-1] # 'madagascar'"
    ]
   },
@@ -225,12 +230,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here"
+    "# define function here\n",
+    "\n",
+    "def capitalize_countries():\n",
+    "    countries_capitalized = []\n",
+    "    for country in capitalized_destinations:\n",
+    "        countries_capitalized.append(country.capitalize())\n",
+    "    return countries_capitalized"
    ]
   },
   {
@@ -242,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +262,13 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
@@ -284,9 +295,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -298,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
